tests/contract_testcases/polkadot/modifier/declare_08.sol

        contract c {
            function bar() public {
                _;
            }
        }
// ---- Expect: diagnostics ----
// error: 4:17-18: '_' not found
